--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,12 @@ spring:
       # JPA configuration 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   liquibase:
-    enabled: true
-    change-log: classpath:db/migration/db.changelog-master.sql        
+    enabled: false
+    change-log: classpath:db/changelog/db.changelog-master.yaml       
