--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,6 @@
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-web</artifactId>
 					</dependency>
-
 					<dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-devtools</artifactId>
@@ -70,8 +69,34 @@
 						<artifactId>liquibase-hibernate6</artifactId>
 						<version>4.31.1</version>
 					</dependency>
+					<dependency>
+						<groupId>io.jsonwebtoken</groupId>
+						<artifactId>jjwt-api</artifactId>
+						<version>0.11.5</version>
+					</dependency>
+					<dependency>
+						<groupId>io.jsonwebtoken</groupId>
+						<artifactId>jjwt-impl</artifactId>
+						<version>0.11.5</version>
+					</dependency>
+					<dependency>
+						<groupId>io.jsonwebtoken</groupId>
+						<artifactId>jjwt-jackson</artifactId>
+						<version>0.11.5</version>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-validation</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-aop</artifactId>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-security</artifactId>
+					</dependency>
 		</dependencies>
- 
  <build>
     <plugins>
       <plugin>
@@ -93,7 +118,7 @@
 			 <configuration>
         	  <propertyFile>src/main/resources/liquibase.properties</propertyFile>
 			  <changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
-			<!-- <diffChangeLogFile>src/main/resources/db/changelog/diff-output.sql</diffChangeLogFile> if we are doing copy past then fine -->
+			<!-- <diffChangeLogFile>src/main/resources/db/changelog/diff-output.sql</diffChangeLogFile> if we are doing copy past from this file to original then fine -->
     		</configuration>
 		</plugin>  
       <plugin>
