--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
  - include:
      file: db/changelog/v1-init-db.sql
+ - include:
+     file: db/changelog/v2-add-default-role.sql
